# tempusalert-be

./: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .lintstagedrc  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  install.sh  package.json
.docker/mongo/: replica.key
.github/workflows/: cd.yml  ci.yml  test_and_lint.yaml
.husky/: pre-commit
__mock_device__/: app.py  requirement.txt
database-connector/: Cargo.toml
database-connector/src/: database.rs
iot-server/: Cargo.toml
iot-server/src/: lib.rs  main.rs  topic.rs
iot-server/src/features/: mod.rs
iot-server/src/features/featureA/: mod.rs
iot-server/src/features/template_feature/: mod.rs
settings/: base.toml  dev.toml  prod.toml  test.toml
src/: errors.rs  json.rs  lib.rs  main.rs  message.rs  notification.rs  parse_env_var.rs  publish_mqtt_message.rs  push_notification.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: db.rs  mod.rs  model.rs
src-tauri/src/dtos/: dtos_in.rs  dtos_out.rs  mod.rs
src-tauri/src/handler/: mod.rs
src-tauri/src/iot_server/: mod.rs  topic_a.rs
src/auth/: mod.rs
src/backend_core/: mod.rs  models.rs  utils.rs
src/backend_core/features/: mod.rs
src/backend_core/features/device_status_feature/: iot.rs  mod.rs  models.rs  web.rs
src/backend_core/features/device_status_feature/iot/: feature.rs  mqtt_messages.rs
src/backend_core/features/device_status_feature/web/: mod.rs
src/backend_core/features/device_status_feature/web/routes/: get_all_devices.rs  get_device_by_id.rs  mod.rs
src/backend_core/features/devices_status_feature/: mod.rs  models.rs
src/backend_core/features/devices_status_feature/iot/: feature.rs  mqtt_messages.rs
src/backend_core/features/devices_status_feature/web/: mod.rs
src/backend_core/features/devices_status_feature/web/routes/: get_all_devices.rs  get_device_by_id.rs  mod.rs
src/backend_core/features/fire/: iot.rs  web.rs
src/backend_core/features/fire_alert_feature/: fixed_value.rs  mod.rs  models.rs
src/backend_core/features/fire_alert_feature/iot/: feature.rs  mqtt_messages.rs
src/backend_core/features/fire_alert_feature/web/: mod.rs
src/backend_core/features/fire_alert_feature/web/routes/: get_button_logs_of_user.rs  get_buzzer_logs.rs  get_co_logs_of_user.rs  get_component_safety_status.rs  get_fire_logs_of_user.rs  get_gas_logs_of_user.rs  get_heat_logs_of_user.rs  get_light_logs.rs  get_logs_of_user.rs  get_smoke_logs_of_user.rs  get_status.rs  mod.rs
src/backend_core/features/fire_feature/: iot.rs  mod.rs  models.rs  notifications.rs  web.rs
src/backend_core/features/fire_feature/iot/: feature.rs  mod.rs  mqtt_messages.rs
src/backend_core/features/fire_feature/web/: mod.rs
src/backend_core/features/fire_feature/web/routes/: get_all_log_of_user.rs  get_logs_of_user.rs  mod.rs
src/backend_core/features/remote_control_feature/: mod.rs  models.rs  notifications.rs
src/backend_core/features/remote_control_feature/iot/: feature.rs  mqtt_messages.rs
src/backend_core/features/remote_control_feature/web/: mod.rs
src/backend_core/features/remote_control_feature/web/routes/: control_buzzer.rs  control_light.rs  mod.rs
src/backend_core/features/template_feature/: iot.rs  mod.rs  notifications.rs  web.rs
src/configs/: mod.rs  tracing.rs
src/core/features/: mod.rs
src/core/features/template_feature/: mod.rs
src/database_client/: mod.rs
src/dtos/: mod.rs  response.rs
src/handlers/: error.rs  mod.rs  server.rs
src/iot_core/: mod.rs
src/iot_core/features/: mod.rs
src/iot_core/features/template_feature/: mod.rs
src/mqtt_client/: mod.rs
src/repositories/: database.rs  mod.rs
src/routes/: mod.rs  server.rs
src/types/: mod.rs
src/utils/: mod.rs  task.rs
src/web_core/: mod.rs
src/web_core/configs/: mod.rs  server.rs  swagger.rs  tracing.rs
src/web_core/constants/: mod.rs
src/web_core/dtos/: response.rs
src/web_core/features/: mod.rs
src/web_core/features/example_feature/: mod.rs
src/web_core/features/template_feature/: mod.rs
src/web_core/models/: mod.rs
src/web_core/repositories/: database.rs
src/web_core/routes/: mod.rs
src/web_core/types/: mod.rs
src/web_core/utils/: mod.rs  task.rs
web-server/: Cargo.toml
web-server/src/: lib.rs  main.rs
web-server/src/configs/: env.rs  mod.rs  server.rs  swagger.rs
web-server/src/constants/: mod.rs
web-server/src/features/: mod.rs
web-server/src/features/example_feature/: mod.rs
web-server/src/features/template_feature/: mod.rs
web-server/src/handlers/: mod.rs
web-server/src/repositories/: database.rs
web-server/src/routes/: mod.rs
web-server/src/types/: mod.rs
web-server/src/utils/: dir.rs
