[package]
name = "tempusalert-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
mongodb = { version = "2.8.1", features = ["bson-chrono-0_4"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
