[package]
name = "tempusalert-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
rumqttc = { version = "0.23.0", features = ["url"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
anyhow = "1.0.79"
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["serde"] }
config = "0.14.0"
dotenv = "0.15.0"
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
mongodb = { version = "2.8.1", features = ["bson-chrono-0_4"] }
once_cell = "1.19.0"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
rumqttd = "0.19.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
paste = "1.0.14"
