[package]
name = "iot-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
rumqttc = { version = "0.23.0", features = ["url"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
database-connector = { path = "../database-connector" }
mongodb = "2.8.1"
