[package]
name = "tempusalert"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rumqttc = "0.23.0"
mongodb = { version = "2.8.1", features = ["bson-chrono-0_4"] }
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
thiserror = "1.0.57"
chrono = { version = "0.4.34", features = ["serde"] }
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
